fix(wrapper): take scrollbar width into account for sizing

--- a/src/app/wrapper/wrapper.component.scss
+++ b/src/app/wrapper/wrapper.component.scss
@@ -1,6 +1,7 @@
 .wrapper {
   background: #2C3643;
-  max-width: 75rem;
+  max-width: 74rem;
+  padding-right: 1rem;
   overflow-y: auto;
   height: 100%;
   width: 100%;
